logic of user finished
