# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediauth/api/mapper/UserMapper.java
@@ -1,17 +1,13 @@
 package co.com.crediauth.api.mapper;
 
-import co.com.crediauth.api.requestdto.UserRequestDto;
-import co.com.crediauth.api.responsedto.UserResponseDto;
+import co.com.crediauth.api.requestdto.user.UserCreateRequestDto;
+import co.com.crediauth.api.responsedto.user.UserResponseDto;
 import co.com.crediauth.model.user.User;
 import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
 
 @Mapper(componentModel = "spring")
 public interface UserMapper {
 
-    @Mapping(target = "rolId", constant = "1L")
-    User toEntity(UserRequestDto dto);
-
-
+    User toEntity(UserCreateRequestDto dto);
     UserResponseDto toDto(User user);
 }
