# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediauth/api/requestdto/rol/RolDeleteRequestDto.java
@@ -1,0 +1,9 @@
+package co.com.crediauth.api.requestdto.rol;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record RolDeleteRequestDto(
+        @NotBlank(message = "the id is required")
+        Long id
+) {
+}
