# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediauth/api/requestdto/user/DocumentRequestDto.java
@@ -1,0 +1,9 @@
+package co.com.crediauth.api.requestdto.user;
+
+public record DocumentRequestDto(
+
+        Long idTypeDocument,
+        String documentNumber,
+        String email
+) {
+}
