# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediauth/api/responsedto/rol/RolCreateResponseDto.java
@@ -1,0 +1,8 @@
+package co.com.crediauth.api.responsedto.rol;
+
+public record RolCreateResponseDto(
+        Long idRol,
+        String name,
+        String description
+) {
+}
